rem适配移动端完成

--- a/index.html
+++ b/index.html
@@ -1,42 +1,196 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FC游乐园</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./lib/iconfont/iconfont.css">
-    <link rel="stylesheet" href="./css/index.css">
-</head>
-<body>
-    <!-- 主体内容 -->
-    <div class="main">
-        <!-- banner -->
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="./lib/iconfont/iconfont.css" />
+    <link rel="stylesheet" href="./src/assets/css/index.css" />
+  </head>
+  <body>
+    <div class="caotain">
+      <!-- 主体内容 -->
+      <div class="main">
         <div class="banner">
-            <ul>
-                <li><a href="#"><img src="./uploads/banner_1.png" alt=""></a></li>
-            </ul>
+          <ul>
+            <li><img src="./uploads/banner_1.png" alt="" /></li>
+          </ul>
         </div>
-
-        <!-- 活动标题 -->
-        <div class="title">
-            <h4>乐园活动</h4>
-        </div>
-
-        <!-- 活动 -->
-        <section class="item">
+        <!-- 标题 -->
+        <h4 class="title">乐园活动</h4>
+        <!-- 乐园的内容 -->
+        <section>
+          <div class="item">
             <div class="pic">
-                <a href="#"><img src="./uploads/item_2.png" alt=""></a>
+              <img src="./uploads/item_2.png" alt="" />
+              <span class="iconfont icon-shoucang1"></span>
+              <div class="active">进行中</div>
             </div>
-            <div class="txt">1</div>
+          </div>
+          <div class="txt">
+            <h4 class="top">
+              <p>疯狂的红包 不一样的撕名牌 大型家庭亲子户外活动</p>
+              <span>免费</span>
+            </h4>
+            <div class="bottom">
+              <p>
+                <i class="iconfont icon-qizhi"></i>
+                <span>200人已报名</span>
+              </p>
+              <p>
+                <i class="iconfont icon-shizhong"></i>
+                <span>本周六开始</span>
+              </p>
+            </div>
+          </div>
         </section>
-    </div>
-    <!-- 主体内容 -->
+        <section>
+          <div class="item">
+            <div class="pic">
+              <img src="./uploads/item_1.png" alt="" />
+              <span class="iconfont icon-shoucang1"></span>
+              <div class="active off">已结束</div>
+            </div>
+          </div>
+          <div class="txt">
+            <h4 class="top">
+              <p>疯狂的红包 不一样的撕名牌 大型家庭亲子户外活动</p>
+              <span>免费</span>
+            </h4>
+            <div class="bottom">
+              <p>
+                <i class="iconfont icon-qizhi"></i>
+                <span>200人已报名</span>
+              </p>
+              <p>
+                <i class="iconfont icon-shizhong"></i>
+                <span>本周六开始</span>
+              </p>
+            </div>
+          </div>
+        </section>
+        <section>
+          <div class="item">
+            <div class="pic">
+              <img src="./uploads/item_3.png" alt="" />
+              <span class="iconfont icon-shoucang1"></span>
+              <div class="active">进行中</div>
+            </div>
+          </div>
+          <div class="txt">
+            <h4 class="top">
+              <p>疯狂的红包 不一样的撕名牌 大型家庭亲子户外活动</p>
+              <span>免费</span>
+            </h4>
+            <div class="bottom">
+              <p>
+                <i class="iconfont icon-qizhi"></i>
+                <span>200人已报名</span>
+              </p>
+              <p>
+                <i class="iconfont icon-shizhong"></i>
+                <span>本周六开始</span>
+              </p>
+            </div>
+          </div>
+        </section>
+        <section>
+          <div class="item">
+            <div class="pic">
+              <img src="./uploads/item_2.png" alt="" />
+              <span class="iconfont icon-shoucang1"></span>
+              <div class="active off">已结束</div>
+            </div>
+          </div>
+          <div class="txt">
+            <h4 class="top">
+              <p>疯狂的红包 不一样的撕名牌 大型家庭亲子户外活动</p>
+              <span>免费</span>
+            </h4>
+            <div class="bottom">
+              <p>
+                <i class="iconfont icon-qizhi"></i>
+                <span>200人已报名</span>
+              </p>
+              <p>
+                <i class="iconfont icon-shizhong"></i>
+                <span>本周六开始</span>
+              </p>
+            </div>
+          </div>
+        </section>
+        <section>
+          <div class="item">
+            <div class="pic">
+              <img src="./uploads/item_2.png" alt="" />
+              <span class="iconfont icon-shoucang1"></span>
+              <div class="active off">已结束</div>
+            </div>
+          </div>
+          <div class="txt">
+            <h4 class="top">
+              <p>疯狂的红包 不一样的撕名牌 大型家庭亲子户外活动</p>
+              <span>免费</span>
+            </h4>
+            <div class="bottom">
+              <p>
+                <i class="iconfont icon-qizhi"></i>
+                <span>200人已报名</span>
+              </p>
+              <p>
+                <i class="iconfont icon-shizhong"></i>
+                <span>本周六开始</span>
+              </p>
+            </div>
+          </div>
+        </section>
+        <section>
+          <div class="item">
+            <div class="pic">
+              <img src="./uploads/item_2.png" alt="" />
+              <span class="iconfont icon-shoucang1"></span>
+              <div class="active">进行中</div>
+            </div>
+          </div>
+          <div class="txt">
+            <h4 class="top">
+              <p>疯狂的红包 不一样的撕名牌 大型家庭亲子户外活动</p>
+              <span>免费</span>
+            </h4>
+            <div class="bottom">
+              <p>
+                <i class="iconfont icon-qizhi"></i>
+                <span>200人已报名</span>
+              </p>
+              <p>
+                <i class="iconfont icon-shizhong"></i>
+                <span>本周六开始</span>
+              </p>
+            </div>
+          </div>
+        </section>
+      </div>
+      <!-- 主体内容 -->
 
-    <!-- 底部工具栏 -->
-    <footer>2</footer>
-    <!-- 底部工具栏 -->
+      <!-- 底部任务栏-->
+      <footer>
+        <a href="#">
+          <span class="iconfont current icon-index-copy"></span>
+          <p class="current">首页</p>
+        </a>
+        <a href="#">
+          <span class="iconfont icon-youhuiquan"></span>
+          <p>卡券</p>
+        </a>
+        <a href="#">
+          <span class="iconfont icon-iconfront-"></span>
+          <p>我的</p>
+        </a>
+      </footer>
+      <!-- 底部任务栏-->
+    </div>
     <script src="./js/flexible.js"></script>
-</body>
+  </body>
 </html>
